--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.password= paragon01
 app.jwtSecret= Paragon$123
 app.jwtExpirationMs= 86400000
 app.secretKey = PARAGON$87654321
+server.port=8080
